<!-- Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->
<resources>

    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f\n Timestamp: %3$tr"</string>

    <!-- Title of app -->
    <string name="app_name">Planning to drink?</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count textview -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="yes_button">Yes</string>
    <string name="notification_channel_name">Mascot Notification</string>
    <string name="notification_channel_description">Notification from Mascot</string>
    <!-- Button label for Reset button -->
    <string name="reset_button">Test</string>
    <string name="notification_title">Plainning to drink!</string>
    <string name="notification_text">You need to pass the test to unlock the door.</string>
    <string name="text_header">Instruction</string>

    <string name="button_testing">=^● ⋏ ● ^=</string>
    <string name="button_start">Click me to start!</string>
</resources>
